# adventures_in_opencl

./: .gitignore  LICENSE.txt  README
cmake/: COMMON_CONFIG.cmake  FindGLEW.cmake  FindOPENCL.cmake  OSX_CONFIG.cmake  UBUNTU_CONFIG.cmake  cmake_standalone.txt
environment/: .setupenv_enjmac.swp  setupenv_enjmac  setupenv_linux  setupenv_mac  setupenv_vislab
experiments/bitonic/: bitonic.cl  bitonic.py  timing.py
experiments/chaotic_artist/: cartist.cl  cartist.py  initialize.py  main.py  server.py
experiments/cond/: CMakeLists.txt  func.cl  func.cpp
experiments/forcefield/: .part2.cpp.swo  CMakeLists.txt  cll.cpp  cll.h  ff.cl  ff.cpp  main.cpp  util.h
experiments/func/: cll.h  func.cl  func.cpp  inc.cl  main.cpp
experiments/inc/: CMakeLists.txt  README  a.cl  b.cl  cll.h  inc.cl  inc.cpp  lvl2.cl  util.h
experiments/radix/amd/: a.out  radix.cl  radix.py  radixsort.hpp  radixsort_cl.hpp  radixsort_cl_kernels.hpp  radixsort_parent.hpp  str2src.cpp
experiments/radix/nv/: RadixSort.cl  RadixSort.cpp  RadixSort_keysonly.cl  Scan.cpp  Scan_b.cl  radix.py
experiments/reduce/: clutil.py  main.py
experiments/structs/: structs.py
experiments/texshare/: clutil.py  glutil.py  main.py  part2.py  vector.py
experiments/wave/: clu.py  glutil.py  initialize.py  main.py  test.py  update.cl  wave.cl  wave.py
info/: CMakeLists.txt  README  cll.h  main.cpp  part1.cl  util.cpp  util.h
info/c/: CMakeLists.txt  main.cpp
info/cpp/: cll.cpp  main.cpp  util.cpp  util.h
opencl10/: README
opencl11/: README
opencl11/CL/: cl.hpp
part1/: CMakeLists.txt  README  cll.cpp  cll.h  main.cpp  part1.cpp  util.cpp
part1.5/: CMakeLists.txt  cll.cpp  cll.h  main.cpp  part1.cl  part1.cpp  util.cpp
part2/: CMakeLists.txt  README  cll.cpp  cll.h  main.cpp  part2.cl  part2.cpp  util.cpp  util.h
part3/: CMakeLists.txt  README  cll.cpp  cll.h  part3.cl  part3.cpp  util.cpp
python/part1/: main.py
python/part2/: clutil.py  glutil.py  initialize.py  main.py  main_pyglet.py  part2.cl  part2.py  timing.py
python/part3/: part3.cl  part3.py
